Neu

Communicator::Connect zum verbinden des Connectors

Authenticator::GeneratePrivatePublicKeyPair()

Authenticator::GenerateSignature()

Veränderungen zum Entwurf

AuthHandler::authenticate => AuthHandler::publickeyauthenticate zu ähnliche signatur mit der Passwort Autorization

Container:
Snapshot => CreateSnapshot // Typname darf kein Methodenname sein

18.01.2020 Docker, Container class Basic Implementation, Snapshot stub

CommandLineInterface: Command structure changed; now uses subcommands to differentiate between different requests

Windows

gtest
cmake -Dgtest_force_shared_crt=1 .
cmake --build . -t install
-DGTEST_INCLUDE_DIR="C:/Program Files (x86)/googletest-distribution/include" -DGTEST_LIBRARY:FILEPATH=C:/Program Files (x86)/googletest-distribution/lib/gtestd.lib -DGTEST_MAIN_LIBRARY:FILEPATH=C:/Program Files (x86)/googletest-distribution/lib/gtest_maind.lib

QT5
in workspace/build
cmake .. -DQt5_DIR="C:\Qt\Qt5.14.0\5.14.0\msvc2017_64\lib\cmake\Qt5"


openssl-devel qt5-qtbase-devel

1.2.2010 Christopher - Certless TLSListener for CommunicatorListener