@@ -6,37 +6,23 @@
 
 using namespace balancedbanana::configfiles;
 
-ApplicationConfig::ApplicationConfig() :
-    values_(){
-}
+ApplicationConfig::ApplicationConfig() = default;
 
 ApplicationConfig::ApplicationConfig(const std::filesystem::path &path) {
     //TODO implement
 }
 
-size_t ApplicationConfig::count() {
-    return values_.size();
+ApplicationConfig::ApplicationConfig(std::istream &data) {
+    //TODO implement
 }
 
-void ApplicationConfig::Set(const std::string &key, const std::string &value) {
-    if(!key.empty()) {
-        values_[key] = value;
-    }
+ApplicationConfig::ApplicationConfig(const balancedbanana::configfiles::ApplicationConfig &original) = default;
+
+void ApplicationConfig::Serialize(std::ostream &data) const{
+
 }
 
-std::string &ApplicationConfig::Get(const std::string &key) {
-    return values_[key];
-}
-
-void ApplicationConfig::Clear() {
-    values_.clear();
-}
-
-bool ApplicationConfig::Save(const std::filesystem::path &path) {
+bool ApplicationConfig::Save(const std::filesystem::path &path) const{
     //TODO implement
     return false;
-}
-
-bool ApplicationConfig::Contains(const std::string &key) {
-    return values_.find(key) != values_.end();
 }
